--- a/app/src/main/res/layout/fragment_laptop.xml
+++ b/app/src/main/res/layout/fragment_laptop.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/laptop_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LaptopFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Laptop Fragment" />
-
-</FrameLayout>
+    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+    app:spanCount="2"
+    tools:context=".ui.CameraFragment"
+    tools:listitem="@layout/shopping_item_layout" />
